# GMPF-CPP

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
docs/: Doxyfile.in
includes/: defines.hh  globalData.hh  gmpf.hh  gtk.hh  macro.hh
includes/callback/: callbacks.hh  signal_handler.hh
includes/callbacks/: callbacks.hh  signal_handler.hh
includes/command/: command.hh
includes/commands/: command.hh  command_manager.hh
includes/config/: config.hh  logger.hh
includes/data/: global_data.hh
includes/data_structure/: global_data.hh  layer.hh  layer_manager.hh  position.hh  project_info.hh  size.hh
includes/data_structures/: angle.hh  global_data.hh  layer.hh  layer_manager.hh  project_info.hh  size.hh  tool_box.cc  tool_box.hh
includes/data_structures/layers/: layer_manager.hh
includes/data_structures/tools/: abstract_tool.hh  painter.hh  tool.hh  tool_box.hh
includes/exceptions/: parsing_exception.hh
includes/misc/: logger.hh  singleton.hh  type.hh  utils.hh
resources/: config.json  gmpf.conf  interface.glade  interface.glade~
resources/themes/: main.css
src/: CMakeLists.txt  gmpf.cc  gtk.cc  main.cc
src/callbacks/: CMakeLists.txt  callbacks.cc  signal_handler.cc
src/commands/: CMakeLists.txt  command_manager.cc
src/config/: CMakeLists.txt  config.cc  logger.cc
src/data/: CMakeLists.txt  global_data.cc
src/data_structure/: CMakeLists.txt  angle.cc  global_data.cc  layer.cc  layer_manager.cc  position.cc  project_info.cc  size.cc
src/data_structures/: CMakeLists.txt  angle.cc  global_data.cc  layer.cc  layer_manager.cc  position.cc  project_info.cc  size.cc
src/data_structures/layers/: CMakeLists.txt  layer.cc  layer_manager.cc
src/data_structures/tools/: CMakeLists.txt  abstract_tool.cc  painter.cc  tool.cc  tool_box.cc
src/exceptions/: CMakeLists.txt  parsing_exception.cc
src/misc/: CMakeLists.txt  logger.cc
test/: CMakeLists.txt  position.cc  size_test.cc
test/data_structure/: CMakeLists.txt  angle_test.cc  position_test.cc  size_test.cc
test/data_structures/: CMakeLists.txt  angle_test.cc  position_test.cc  size_test.cc
test/misc/: CMakeLists.txt  logger_test.cc
